--- a/springboot/异步、定时、邮件任务.md
+++ b/springboot/异步、定时、邮件任务.md
@@ -69,7 +69,7 @@ public class AsyncController {
 
 6、给hello方法添加@Async注解；
 
-```
+```java
 //告诉Spring这是一个异步方法
 @Async
 public void hello(){
@@ -84,7 +84,7 @@ public void hello(){
 
 SpringBoot就会自己开一个线程池，进行调用！但是要让这个注解生效，我们还需要在主程序上添加一个注解@EnableAsync ，开启异步注解功能；
 
-```
+```java
 @EnableAsync //开启异步注解功能
 @SpringBootApplication
 public class SpringbootTaskApplication {
