--- a/验证码.md
+++ b/验证码.md
@@ -1,7 +1,5 @@
 
 
-
-
 # 验证码工具类：
 
 ```java
@@ -476,6 +474,8 @@ public class UserController {
 
 # 真正的分离（redis）
 
+**存**
+
 ```java
 @RestController
 public class UsersController {
@@ -516,6 +516,29 @@ public class UsersController {
         return map;
     }
 }
+
+```
+
+**取**
+
+```java
+ @PostMapping("/login")
+    @ResponseBody
+    public ResponseEntity register(String code, String codeKey, @RequestBody User user, HttpServletRequest request) {
+
+        System.out.println(user);
+        //后端真正的验证码值
+        String realcode = stringRedisTemplate.opsForValue().get(codeKey);
+        
+        if (code.equalsIgnoreCase(realcode)) {
+            System.out.println("++++++++++成功++++++++++");
+            return ResponseEntity.OK();
+        } else {
+            System.out.println("============失败============");
+            return ResponseEntity.ERROR("failed");
+        }
+
+    }
 
 ```
 
